--- a/K-means.ipynb
+++ b/K-means.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b1d8c86d",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "078a0324",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "1776932f",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "f8278072",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
        "array(['setosa', 'versicolor', 'virginica'], dtype='<U10')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,10 +133,28 @@
    "execution_count": 8,
    "id": "e36ef299",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-2.69823941,  1.3454702 ],\n",
+       "       [-2.87459835,  1.8097575 ],\n",
+       "       [ 0.96077126,  1.17046777],\n",
+       "       ...,\n",
+       "       [-2.80303543,  2.72948115],\n",
+       "       [ 0.24057359,  2.40103109],\n",
+       "       [-2.63807768,  1.95621065]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "X, y = make_blobs(n_samples=2000, centers=blob_centers,\n",
-    "                  cluster_std=blob_std, random_state=7)"
+    "                  cluster_std=blob_std, random_state=7)\n",
+    "\n",
+    "display(X)"
    ]
   },
   {
@@ -502,7 +520,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (main, Aug 25 2022, 23:26:10) \n[GCC 11.2.0]"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
